--- a/Cressiendo/Html/index.html
+++ b/Cressiendo/Html/index.html
@@ -1,21 +1,22 @@
-<html style="background-image: url('');">
+<link rel="stylesheet" href="../style/css/index.css">
+<html>
     <head>
         <meta name="Cressiendo" lang="es" charset="UTF-8">
         <title>Cressiendo</title>
-        <link rel="stylesheet" href="../style/css/index.css">
     </head>
     <body>
         <div class="header">
-            <h1 class="mainTitle">Cr</h1>
-            <img src="../img/logo.png" alt="Logo de Cressiendo" class="logoimg">
-            <h1 class="mainTitle">ssiendo</h1>
+            <!h1 class="mainTitle"><!/h1>
+            <img src="../img/CREESIENDO Logo.png" alt="Logo de Cressiendo" class="logoimg">
+            <!h1 class="mainTitle"><!/h1>
         </div>
+        <br>
         <div class="navbar">
-            <a href="">Sobre nosotros</a>
-            <a href="">Objetivo</a>
+            <a href="index.html">Sobre nosotros</a>
+            <a href="Mision.html">Objetivo</a>
             <a href="">Resultados</a>
-            <a href="">Nuestro equipo</a>
+            <a href="equipo.html">Nuestro equipo</a>
         </div>
-        <p>Texto de referencia</p>
+        <p>FASE DE PRUEBAS Y CONSTRUCCIÓN BASE, NO ES LA VERSIÓN FINAL</p>
     </body>
 </html>
