--- a/Cressiendo/Html/mision.html
+++ b/Cressiendo/Html/mision.html
@@ -21,7 +21,7 @@
                 <h2>Mision</h2>
                 <p>Texto de referenciasdflasdfasfasdfadsfasdfasdfasfdasfasdfasfadsf</p>
             </div>
-            <img src="https://media.discordapp.net/attachments/1273710404844916839/1293633405535387823/Png.png?ex=670966fe&is=6708157e&hm=f0e8c65685b9f59490d3d6d2fe79ba9658f2ac4ad49c4a6142038039542435da&=&format=webp&quality=lossless&width=472&height=472" alt="">
+            <img src="../img/elemento 2.png" alt="Tu imagen aqui" style="max-width: 30%; height: auto;">
         </div>
     </body>
 </html>
